# panic

./: FrameResource.h  Parthenon.cpp  imgui.ini  meson.build
.cache/clangd/index/: Camera.cpp.93B476BC09A3356B.idx  Camera.h.4108F3BA411B9697.idx  DDSTextureLoader.cpp.BC7B419F583906DF.idx  DDSTextureLoader.h.33DE3698194F87CE.idx  FrameResource.cpp.22A5DC173B175AC3.idx  FrameResource.h.13B43D019AC18D54.idx  GameTimer.cpp.31FF480BA3C1AB36.idx  GameTimer.h.DC1F0A8DC9F35D84.idx  GeometryGenerator.cpp.7D160A4050FFC410.idx  GeometryGenerator.h.652CD9E22490BF8B.idx  MathHelper.cpp.49C1F0A263280F3F.idx  MathHelper.h.33B670F5803E1562.idx  Parthenon.cpp.6AC14531F50E4C01.idx  UploadBuffer.h.598C28A60057C2E2.idx  Waves.cpp.69F9B2C7B86C4D8E.idx  Waves.h.8560E23BBF2632DF.idx  d3dApp.cpp.A2CF9701BB317A58.idx  d3dApp.h.D6DC12A14A02F2F0.idx  d3dUtil.cpp.99B1B787158663F5.idx  d3dUtil.h.55BB680A5619C1C4.idx  d3dx12.h.B3CF8213DB567E50.idx  imconfig.h.C1CB044F175DCFF0.idx  imgui.cpp.9F144EDE06C0FD72.idx  imgui.h.E73A04A4C0AB25FB.idx  imgui_demo.cpp.90D7E38035A1F5D5.idx  imgui_draw.cpp.4E8120ACFF881D8C.idx  imgui_impl_dx12.cpp.AAB2596CCAB6615F.idx  imgui_impl_dx12.h.5F8FCEF3CB9D6F1C.idx  imgui_impl_win32.cpp.C4BC8B2A787AC103.idx  imgui_impl_win32.h.ED1B99EE4F895A75.idx  imgui_internal.h.7C819867BAB811AF.idx  imgui_stdlib.cpp.A5962F0A35A5FAC7.idx  imgui_stdlib.h.5FBED8DDE0DCBB45.idx  imgui_tables.cpp.74EAC6D9F0EED19A.idx  imgui_widgets.cpp.E21708C9CA0FBA41.idx  imstb_rectpack.h.512C27695C9AF73B.idx  imstb_textedit.h.C24B66946C54567C.idx  imstb_truetype.h.98009011B5BB5EE1.idx
Common/: OBJ_Loader.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h
Models/: ground.txt
Shaders/: Default.hlsl  TreeSprite.hlsl
